Added titles to old posts

--- a/_posts/2020-04-13-post.md
+++ b/_posts/2020-04-13-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Rust On Windows (is no good.)"
+title:  "Rust On Windows (is no good.), Design Patterns, WSL2 Upgrade"
 date:   2020-04-13 00:00:00 +0000
 categories:
 ---
