--- a/_posts/2020-04-19-post.md
+++ b/_posts/2020-04-19-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Architecture Notes: MVC, AMVCC, MVP, MVVM"
 date:   2020-04-19 00:00:00 +0000
 categories:
 ---
