--- a/_posts/2020-04-20-post.md
+++ b/_posts/2020-04-20-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Godot Building, Godot Reference Counting, Godot Integer Bug"
 date:   2020-04-20 00:00:00 +0000
 categories:
 ---
