--- a/_posts/2020-04-28-post.md
+++ b/_posts/2020-04-28-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Keeping Windows on Top, Allocators, Valgrind w/ Uninitialized Values, Console Testing"
 date:   2020-04-28 00:00:00 +0000
 categories:
 ---
