--- a/_posts/2020-04-18-post.md
+++ b/_posts/2020-04-18-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Double Right Click, PottyTime is Sokoban, Got Laptop Back"
 date:   2020-04-18 00:00:00 +0000
 categories:
 ---
