--- a/_posts/2020-04-24-post.md
+++ b/_posts/2020-04-24-post.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Catch Test Framework, C++ Docs, C++ In VSCode"
 date:   2020-04-24 00:00:00 +0000
 categories:
 ---
