switched to old develpr theme

--- a/_posts/2020-04-14-post.md
+++ b/_posts/2020-04-14-post.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Converting Windows Jenkins to WSL/Docker"
 date: 2020-04-14 00:00:00 +0000
-categories:
+categories: docker jenkins testing
 ---
 <!-- desc: Converting Windows Jenkins to WSL/Docker -->
 # 2020/04/14
