--- a/_posts/2020-04-15-post.md
+++ b/_posts/2020-04-15-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Jenkins with docker-compose"
 date:   2020-04-15 00:00:00 +0000
-categories:
+categories: jenkins testing
 ---
 <!-- desc: Jenkins with docker-compose -->
 # 2020/04/15
