--- a/_posts/2020-04-23-post.md
+++ b/_posts/2020-04-23-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Docker data-root Config"
 date:   2020-04-23 00:00:00 +0000
-categories:
+categories: docker
 ---
 
 # 2020/04/23
