--- a/_posts/2020-04-28-post.md
+++ b/_posts/2020-04-28-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Keeping Windows on Top, Allocators, Valgrind w/ Uninitialized Values, Console Testing"
 date:   2020-04-28 00:00:00 +0000
-categories:
+categories: windows c++ valgrind console
 ---
 
 # 2020/04/28
