--- a/_posts/2020-04-30-post.md
+++ b/_posts/2020-04-30-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "WSL Time Sync"
 date:   2020-04-30 00:00:00 +0000
-categories:
+categories: wsl2 blog
 ---
 
 # 2020/04/30
@@ -14,4 +14,12 @@ Just realized that my ubuntu apt wont update in docker because my WSL2 system is
 ```
 sudo hwclock -s
 ```
+
+## Web Service
+
+formspree.io
+
+ko-fi.com
+
+google analytics
 
