--- a/_posts/20200425/2020-04-25-post.md
+++ b/_posts/20200425/2020-04-25-post.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Dev Journal"
+title:  "Profiling and ECS"
 date:   2020-04-25 00:00:00 +0000
-categories:
+categories: design testing
 ---
 
 # 2020/04/25
