--- a/_posts/20200410/2020-04-10-post.md
+++ b/_posts/20200410/2020-04-10-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Journaling"
 date:   2020-04-10 00:00:00 +0000
-categories:
+categories: godot
 ---
 <!-- desc: Journaling -->
 # 2020/4/10 - Journaling
