--- a/_posts/20200411/2020-04-11-post.md
+++ b/_posts/20200411/2020-04-11-post.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "Structured Dialog"
+title:  "Agile Value Proposition, Structured Dialog"
 date:   2020-04-11 00:00:00 +0000
-categories:
+categories: process life godot
 ---
 <!-- desc: Structured Dialog -->
 # 2020/4/11
