Updated posts with tags instead of categories

--- a/_posts/2020-04-17-post.md
+++ b/_posts/2020-04-17-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Exporting APPX from Godot"
 date:   2020-04-17 00:00:00 +0000
-categories: godot
+tags: godot
 ---
 <!-- desc: Exporting APPX from Godot (UWP) -->
 # 2020/04/17
