--- a/_posts/2020-04-30-post.md
+++ b/_posts/2020-04-30-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "WSL Time Sync"
 date:   2020-04-30 00:00:00 +0000
-categories: wsl2 blog
+tags: wsl2 blog
 ---
 
 # 2020/04/30
@@ -23,3 +23,4 @@ ko-fi.com
 
 google analytics
 
+https://www.algolia.com/
