--- a/_posts/20200411/2020-04-11-post.md
+++ b/_posts/20200411/2020-04-11-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Agile Value Proposition, Structured Dialog"
 date:   2020-04-11 00:00:00 +0000
-categories: process life godot
+tags: process life godot
 ---
 <!-- desc: Structured Dialog -->
 # 2020/4/11
