--- a/_posts/20200425/2020-04-25-post.md
+++ b/_posts/20200425/2020-04-25-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Profiling and ECS"
 date:   2020-04-25 00:00:00 +0000
-categories: design testing
+tags: design testing
 ---
 
 # 2020/04/25
