--- a/_posts/2020-04-13-post.md
+++ b/_posts/2020-04-13-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Rust On Windows (is no good.), Design Patterns, WSL2 Upgrade"
 date:   2020-04-13 00:00:00 +0000
-categories: rust windows design wsl2
+tags: rust windows design wsl2
 ---
 # 2020/04/13
 
