--- a/_posts/2020-04-18-post.md
+++ b/_posts/2020-04-18-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Double Right Click, PottyTime is Sokoban, Got Laptop Back"
 date:   2020-04-18 00:00:00 +0000
-categories: feature pottytime
+tags: feature pottytime
 ---
 
 # 2020/04/18
