--- a/_posts/2020-04-20-post.md
+++ b/_posts/2020-04-20-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Godot Building, Godot Reference Counting, Godot Integer Bug"
 date:   2020-04-20 00:00:00 +0000
-categories: godot
+tags: godot
 ---
 
 # 2020/04/20
