--- a/_posts/2020-04-21-post.md
+++ b/_posts/2020-04-21-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Dealing with demotivation"
 date:   2020-04-21 00:00:00 +0000
-categories: life
+tags: life
 ---
 
 # 2020/04/21
