--- a/_posts/2020-04-24-post.md
+++ b/_posts/2020-04-24-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Catch Test Framework, C++ Docs, C++ In VSCode"
 date:   2020-04-24 00:00:00 +0000
-categories: testing docs c++
+tags: testing docs c++
 ---
 
 # 2020/04/24
