--- a/_posts/2020-04-29-post.md
+++ b/_posts/2020-04-29-post.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "G++ vs Clang, Leaky Destructors, Github Pages"
 date:   2020-04-29 00:00:00 +0000
-categories: g++ clang c++ github
+tags: g++ clang c++ github
 ---
 
 # 2020/04/29
