--- a/_posts/2020-05-01-post.md
+++ b/_posts/2020-05-01-post.md
@@ -1,6 +1,6 @@
 ---
-title: "5 Hour Rule"
-tags: life
+title: "5 Hour Rule, Surface & Deep Knowledge, Grid Movement"
+tags: life, design
 ---
 
 # 2020/05/01
@@ -42,7 +42,29 @@ Setting up several fail gates here:
 
 After picking the best implementation, the plan is to create bodies for each entity on the board. When the player moves, an impulse will be applies to the adjacent body and we'll simulate for a single step. The step time delta needs to be sufficiently large enough to determine if the effected bodies were actually able to move into an adjacent square. I can think of some weird edge cases where the naive approach will fail, but for the more simple use cases, this should suffice until the problem is better understood. The complete time step should occur within a single input Action and then all blocks detected as moved *enough* will be added to the output Action list.
 
-Tangent Note: Someone mentioned sliding based on off center raycasts that indicate if we want to slide one direction or another OR if we want to push up against the object without sliding.
+### Conclusion
+
+I don't think using Box2D to perform discrete grid movement was a good idea. **TODO: Discuss results.**
+
+## New Grid Movement Ideas
+
+Since Box2D was a bust, I'm starting to look refresh my idea of what is needed. So far I've been obsessed with trying to do a functional approach to the movement. The fact that Box2D isn't functional itself is kind of making me thing I just need to come up with an approach that is more stateful. 
+
+The way the new algorithm works is that each grid position starting from the player and heading in the desired direction will be checked until an ActionResult(true) or ActionResult(false) is returned. A false return will prevent any of the actions from continuing. This is usually the result of an un-movable object in the chain or an invalid position in the chain. A true result means that we are clear to add the Action to the output action queue to be committed at the end of the frame.
+
+* One improvement I'd like to add to ActionResult is a EAGAIN like return. In this use case, you'd basically return something like a GridMoveAction as an alternate, but instead of returning to the System, you continue processing the movement transaction.
+
+After each of the positions are checked for validity and emptiness, there is a check for movability and then bump-ability. Entities that have no MoveableComponent are considered un-moveable. (Not sure if this should be inverted for efficiency later on.) If a position is not empty, and moveable, and bump-able, the BumpableComponent's bump lambda (i.e. std::function) member is called to allow the entity to decide its own fate. The primary use case for this bump-ability is to allow an entity to decide if it can be consumed depending on the entity doing the bumping. 
+
+It would be nice to make the bump-ability a bit more generic, but its limited implementation serves my purpose for now.
+
+In conclusion, I'm generally back to where I was with regards to the GDScript version of the model code, but now I have a fully functioning ECS in a proper object oriented language. Hopefully the return on investment will start to turn around now that I appear to be a bit more over the hump. 
+
+
+
+## Grid Sliding Trick
+
+Someone mentioned sliding based on off-center ray casts that indicate if we want to slide one direction or another OR if we want to push up against the object without sliding. Capsule shapes almost always solve this problem, but if you aren't using a physics engine, you likely aren't managing capsules.
 
 
 
